--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,6 +1,6 @@
 body {
-  background-color: #ccc;
+  background-color: rgba(250, 246, 246, 0.993);
   text-transform: uppercase;
   font: bold;
-  color: red;
+  color: Green;
 }
