se modifico el color a rojo y se añadieron parrafos 4

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -2,5 +2,5 @@ body {
   background-color: rgba(250, 246, 246, 0.993);
   text-transform: uppercase;
   font: bold;
-  color: Green;
+  color: red;
 }
