--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,82 +1,4 @@
-.fixed-top {
-  top: -140px;
-  transform: translateY(140px);
-  transition: transform 0.3s;
-}
-
-.btn-outline-danger {
-  color: white;
-  border-color: black;
-  background-color: black;
-}
-
-.btn-dark:hover {
-  color: black;
-  border-color: white;
-  background-color: white;
-}
-.btn-dark:active {
-  color: black;
-  border-color: #198754;
-  background-color: #198754;
-}
-/*
-.btn-dark:focus{
-color: black;
-border-color: white;
-background-color:white;
-}*/
-
-/* The side navigation menu */
-.sidenav {
-  height: 100%; /* 100% Full-height */
-  width: 0; /* 0 width - change this with JavaScript */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Stay on top */
-  top: 200px;
-  right: 0;
-  background-color: #111; /* Black*/
-  overflow-x: hidden; /* Disable horizontal scroll */
-  padding-top: 60px; /* Place content 60px from the top */
-  transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
-}
-
-/* The navigation menu links */
-.sidenav a {
-  padding: 8px 8px 8px 32px;
-  text-decoration: none;
-  font-size: 25px;
-  color: #818181;
-  display: block;
-  transition: 0.3s;
-}
-
-/* When you mouse over the navigation links, change their color */
-.sidenav a:hover {
-  color: #f1f1f1;
-}
-
-/* Position and style the close button (top right corner) */
-.sidenav .closebtn {
-  position: absolute;
-  top: 0;
-  /*left: 25px;*/
-  font-size: 40px;
-  /*margin-left: 20px;*/
-}
-
-/* Style page content - use this if you want to push the page content to the right when you open the side navigation */
-#main {
-  transition: margin-left 0.5s;
-  padding: 20px;
-}
-
-/* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
-@media screen and (max-height: 450px) {
-  .sidenav {
-    padding-top: 15px;
-  }
-  .sidenav a {
-    font-size: 18px;
-  }
+body {
+  background-color: #ccc;
+  color: rgb(27, 189, 73);
 }
